1st version public
ready to post to live web

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Central City Properties</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <header>
@@ -13,11 +16,13 @@
 
 <main>
     <section id="rental-criteria">
-        <h1>RENTAL SCREENING CRITERIA</h1>
+        <h1 class="bold-homizio">RENTAL SCREENING CRITERIA</h1>
         <p>Thank you for applying with Central City Properties for your housing needs. Our goal is to offer a well maintained property to tenants who complete our application process and meet our screening requirements.</p>
-        <p>Central City Properties does not discriminate based on: race, color, religion, marital status, national origin, sex, sexual orientation, familial status, disability or source of income. We comply with all federal, state, and local laws concerning Fair Housing.</p>
+        <p class="bold">Central City Properties does not discriminate based on: race, color, religion, marital status, national origin, sex, sexual orientation, familial status, disability or source of income. We comply with all federal, state, and local laws concerning Fair Housing.</p>
     </section>
     
+    <hr>
+
     <section id="general-requirements">
         <h2>GENERAL REQUIREMENTS</h2>
         <ol>
@@ -74,5 +79,10 @@
 </section>
 
 </main>
+
+<footer>
+    <img src="images/equal_opportunity_trans.png" alt="Equal Opportunity Housing Logo" id="EEH">
+    <p>©2023 Central City Properties LLC</p>
+</footer>
 </body>
 </html>
